# todoist-sync

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.env.example  config.py  pyproject.toml  reminders_bridge.py  requirements.txt  sync_id.py  sync_tasks.py  todoist_bridge.py
deploy/: com.maxharris.todoist-sync.plist  com.todoist-sync.plist.template  com.todoist-sync.wake-watcher.plist.template  install.sh  todoist-sync
src/todoist_sync/: __init__.py  config.py  reminders_bridge.py  state.py  sync_tasks.py  todoist_bridge.py
swift/reminders-bridge/: Package.swift
swift/reminders-bridge/Sources/reminders-bridge/: main.swift
swift/wake-watcher/: Package.swift
swift/wake-watcher/Sources/wake-watcher/: main.swift
tests/: conftest.py  test_reconcile_scalar.py  test_state.py  test_sync_tasks.py
