[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "todoist-sync"
version = "0.1.0"
description = "Two-way sync between Apple Reminders and Todoist"
requires-python = ">=3.10"
dependencies = [
    "todoist-api-python==4.0.0",
    "python-dotenv==1.2.2",
]

[tool.setuptools.packages.find]
where = ["src"]
