[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "todoist-sync"
dynamic = ["version"]
description = "Two-way sync between Apple Reminders and Todoist"
requires-python = ">=3.10"
dependencies = [
    "todoist-api-python==4.0.0",
    "python-dotenv==1.2.2",
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["src"]
